--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "express-mongo",
   "version": "1.0.0",
   "main": "app.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -10,8 +11,10 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "mongodb": "^6.10.0",
+    "mongoose": "^8.8.2",
     "nodemon": "^3.1.7"
   }
 }
